fix: increased bottom position to remove vader popover flicker

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -5,7 +5,7 @@
     .darkSidePopover {
       display: none;
       position: absolute;
-      bottom: 1.25rem;
+      bottom: 1.5rem;
       left: 50%;
       transform: translate(-50%, 0);
     }
